--- a/examples/test.html
+++ b/examples/test.html
@@ -21,10 +21,10 @@
 <div id="datetime-picker"></div>
 
 <script type="text/javascript">
-console.log(VueScrollBar)
+console.log(VueScrollbar)
 new Vue({
   el: '#datetime-picker',
-  template: '<scrollbar :maxHeight="\'100vh\'" :isMobile="isMobile" style="width: 100vw;height:100vh"><div style="height:200vh;background:linear-gradient(to bottom, #333, #eee)" @click="log"></div></scrollbar>',
+  template: '<scrollbar :maxHeight="\'100vh\'" :isMobile="isMobile" style="width: 100vw;height:100vh" @reachBottom="log" @reachTop="log" @startDrag="log" @endDrag="log"><div style="height:100vh;background:linear-gradient(to bottom, #333, #eee)" @click="log"></div></scrollbar>',
   data: function () {
     return {
       isMobile: /Android|webOS|iPhone|iPod|iPad|BlackBerry|Windows Phone/i.test(navigator.userAgent)
@@ -32,10 +32,10 @@ new Vue({
   },
   methods: {
     log: function (e) {
-      console.log(e)
+      console.log(e || 1)
     }
   },
-  components: { 'scrollbar': VueScrollBar }
+  components: { 'scrollbar': VueScrollbar }
 })
 </script>
 </body>
