--- a/examples/test.html
+++ b/examples/test.html
@@ -24,7 +24,20 @@
 console.log(VueScrollbar)
 new Vue({
   el: '#datetime-picker',
-  template: '<scrollbar :maxHeight="\'100vh\'" :isMobile="isMobile" style="width: 100vw;height:100vh" @reachBottom="log" @reachTop="log" @startDrag="log" @endDrag="log"><div style="height:100vh;background:linear-gradient(to bottom, #333, #eee)" @click="log"></div></scrollbar>',
+  template: '<scrollbar' +
+    ' :maxHeight="\'100vh\'"' +
+    ' :isMobile="isMobile"' +
+    ' style="width: 100vw;height:100vh"' +
+    ' @reachBottom="log"' +
+    ' @reachTop="log"' +
+    ' @startDrag="log"' +
+    ' @endDrag="log"' +
+    ' >' +
+    '   <div' +
+    '   style="height:200vh;background:linear-gradient(to bottom, #333, #eee)"' +
+    '   @click="log"' +
+    '   ></div>' +
+    ' </scrollbar>',
   data: function () {
     return {
       isMobile: /Android|webOS|iPhone|iPod|iPad|BlackBerry|Windows Phone/i.test(navigator.userAgent)
