--- a/examples/test.html
+++ b/examples/test.html
@@ -5,7 +5,6 @@
   <title>vue-scrollbar-live</title>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="../lib/umd/index.js"></script>
-  <link rel="stylesheet" href="../lib/css/index.css">
   <style>
     body {
       padding: 0;
@@ -13,7 +12,7 @@
     }
 
     .scrollbar {
-      background: blue;
+      background: blue !important;
     }
   </style>
 </head>
