feat: emit scroll event

--- a/examples/test.html
+++ b/examples/test.html
@@ -33,6 +33,7 @@ new Vue({
     ' @reachRight="log(\'reach right\')"' +
     ' @startDrag="log"' +
     ' @endDrag="log"' +
+    ' @scroll="log"' +
     ' >' +
     '   <div' +
     '   style="width:200vw;background:url(\'./bg.jpg\')"' +
